--- a/modules/core/client/less/dashboard.less
+++ b/modules/core/client/less/dashboard.less
@@ -17,6 +17,9 @@
      color: @light-grey;
    }
   }
+  .chartbox {
+    padding: 16px;
+  }
   .leads {
 
     @leadheight: 12vh;
